<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".My_account"
    android:background="@color/emerald" >
    
    <ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/logo_description"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="10dp"
   	    android:src="@drawable/text_logo"/>
    
    <TextView
        android:layout_marginTop="100dp"
		android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_routes"
        android:textSize="33sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
		android:id="@+id/button_route_1"
		android:layout_width="@dimen/width_page_container"
		android:layout_height="@dimen/height_button_login_bottom"
		android:layout_centerHorizontal="true"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/route_1"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="150dp" />
    
    <Button
		android:id="@+id/button_route_2"
		android:layout_width="@dimen/width_page_container"
		android:layout_height="@dimen/height_button_login_bottom"
		android:layout_centerHorizontal="true"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/route_2"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="250dp" />
    
    <Button
		android:id="@+id/button_route_3"
		android:layout_width="@dimen/width_page_container"
		android:layout_height="@dimen/height_button_login_bottom"
		android:layout_centerHorizontal="true"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/route_3"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="350dp" />
    
    <Button
		android:id="@+id/button_back"
		android:layout_width="100dp"
		android:layout_height="30dp"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/back"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="430dp"
		android:layout_marginLeft="200dp" />

</RelativeLayout>