<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Review"
    android:background="@color/emerald"  >

    <ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/logo_description"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="10dp"
   	    android:src="@drawable/text_logo"/>
    
    <ImageView
   	    android:id="@+id/toilet_pic"
   	    android:layout_width="100dp"
   	    android:layout_height="100dp"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="80dp"
   	    android:src="@drawable/nothing" />
    
    <ImageView
   	    android:id="@+id/stars"
   	    android:layout_width="200dp"
   	    android:layout_height="20dp" 
        android:layout_marginLeft="100dp"
   	    android:layout_marginTop="140dp"
   	    android:src="@drawable/nothing2"/>
    
    <TextView   
   	    android:id="@+id/toilet_name"
        android:layout_marginTop="90dp"   
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restroom_name"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
		android:id="@+id/button_review_1"
		android:layout_width="220dp"
		android:layout_height="@dimen/height_button_login_bottom"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/review_1"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="200dp" />
    
    <Button
		android:id="@+id/button_review_2"
		android:layout_width="220dp"
		android:layout_height="@dimen/height_button_login_bottom"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/review_2"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="270dp" />
    
    <Button
		android:id="@+id/button_review_3"
		android:layout_width="220dp"
		android:layout_height="@dimen/height_button_login_bottom"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/review_3"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="340dp" />
    
    <Button
		android:id="@+id/button_back"
		android:layout_width="100dp"
		android:layout_height="30dp"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/back"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="430dp"
		android:layout_marginLeft="200dp" />
    
    <ImageView
   	    android:id="@+id/thumb_up1"
   	    android:layout_width="31dp"
   	    android:layout_height="31dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="210dp"
		android:layout_marginLeft="220dp"
   	    android:src="@drawable/thumb_up"/>
    
    <ImageView
   	    android:id="@+id/thumb_up2"
   	    android:layout_width="31dp"
   	    android:layout_height="31dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="280dp"
		android:layout_marginLeft="220dp"
   	    android:src="@drawable/thumb_up"/>
    
    <ImageView
   	    android:id="@+id/thumb_up3"
   	    android:layout_width="31dp"
   	    android:layout_height="31dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="350dp"
		android:layout_marginLeft="220dp"
   	    android:src="@drawable/thumb_up"/>
    <ImageView
   	    android:id="@+id/thumb_down1"
   	    android:layout_width="35dp"
   	    android:layout_height="35dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="207dp"
		android:layout_marginLeft="255dp"
   	    android:src="@drawable/thumb_down"/>
    
    <ImageView
   	    android:id="@+id/thumb_down2"
   	    android:layout_width="35dp"
   	    android:layout_height="35dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="277dp"
		android:layout_marginLeft="255dp"
   	    android:src="@drawable/thumb_down"/>
    
    <ImageView
   	    android:id="@+id/thumb_down3"
   	    android:layout_width="35dp"
   	    android:layout_height="35dp"
   	    android:layout_alignParentTop="true"
		android:layout_marginTop="347dp"
		android:layout_marginLeft="255dp"
   	    android:src="@drawable/thumb_down"/>


</RelativeLayout>