<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/emerald"  >

    <ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/logo_description"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="10dp"
   	    android:src="@drawable/text_logo"/>
    
    <ImageView
   	    android:id="@+id/map"
   	    android:layout_width="match_parent"
   	    android:layout_height="200dp"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="150dp"
   	    android:src="@drawable/nothing" />
    
    <ImageView
   	    android:id="@+id/search_bar"
   	    android:layout_width="match_parent"
   	    android:layout_height="40dp" 
   	    android:layout_marginTop="90dp"
   	    android:src="@drawable/search_bar"/>
    
    <Button
		android:id="@+id/button_lets_tag"
		android:layout_width="220dp"
		android:layout_height="@dimen/height_button_login_bottom"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/button_lets_tag"
		android:textStyle="bold"
		android:textColor="@color/black"
        android:textSize="30sp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="360dp" />
    
    <Button
		android:id="@+id/button_back"
		android:layout_width="100dp"
		android:layout_height="30dp"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/back"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="430dp"
		android:layout_marginLeft="200dp" />

</RelativeLayout>