<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Review_summary"
    android:background="@color/emerald" >

    <ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/logo_description"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="10dp"
   	    android:src="@drawable/text_logo"/>
    
    <ImageView
   	    android:id="@+id/toilet_pic"
   	    android:layout_width="100dp"
   	    android:layout_height="100dp"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="80dp"
   	    android:src="@drawable/nothing" />
    
    <ImageView
   	    android:id="@+id/stars"
   	    android:layout_width="200dp"
   	    android:layout_height="20dp" 
        android:layout_marginLeft="100dp"
   	    android:layout_marginTop="140dp"
   	    android:src="@drawable/nothing2"/>
    
    <TextView   
   	    android:id="@+id/user_name"
        android:layout_marginTop="90dp"   
        android:layout_marginLeft="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
		android:id="@+id/button_back"
		android:layout_width="100dp"
		android:layout_height="30dp"
		android:background="@drawable/shape_round_top_yellow_animated"
		android:text="@string/back"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:textSize="@dimen/textSize_buttons_login_bottom" 
		android:layout_marginTop="430dp"
		android:layout_marginLeft="200dp"/>
    
    <ViewText
        android:id="@+id/summary_review"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="200dp" 
        android:background="#99FFFF" />

</RelativeLayout>